gateway-api/HTTPRoute/bar-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deploy
  namespace: gateway-api-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bar-svc
  template:
    metadata:
      labels:
        app: bar-svc
    spec:
      containers:
      - name: nginx
        image: shixiaochuangk8s/nginx:1.15-alpine
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: nginx-conf
        configMap:
          name: bar-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
  namespace: gateway-api-ns
spec:
  selector:
    app: bar-svc
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
