gateway-api/HTTPRoute/example-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deploy
  namespace: gateway-api-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-svc
  template:
    metadata:
      labels:
        app: example-svc
    spec:
      containers:
        - name: nginx
          image: shixiaochuangk8s/nginx:1.15-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: nginx-conf
          configMap:
            name: example-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: gateway-api-ns
spec:
  selector:
    app: example-svc
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
